src/snapshots/afrotd__parser__tests__interpretation_9.1.9_1.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 9
  - 1
  - 9
index: 1
text: "Nachdem der Ball die Hand von Passer A17 verlassen hat, macht\nB68 zwei Schritte und greift A17 an, ohne den Versuch, den Kontakt zu\nvermeiden."
ruling: "Roughing gegen den Passer. Der Passer ist ein\nverteidigungsloser Spieler, der für Verletzungen anfällig ist und entsprechend geschützt werden muss. Nachdem er zwei Schritte gemacht hat,\nmüsste B68 aufgefallen sein, dass A17 den Ball geworfen hat und in\nder Lage sein, einen Kontakt zu vermeiden."
