src/snapshots/afrotd__parser__tests__interpretation_9.2.1_1.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 9
  - 2
  - 1
index: 1
text: "Team B erzielt durch einen Kickoff-Return einen Touchdown und\ndie Team B-Ersatzspieler betreten das Spielfeld von der Teamzone aus,\nohne am Spiel teilnehmen zu wollen. Sie rennen in die Endzone und\ngratulieren dem Ballträger, wodurch die Ballfreigabe zum nachfolgenden Try erheblich verzögert wird."
ruling: "Unsportliches Verhalten.\nStrafe – 15 Meter, durchgeführt beim Try, dem folgenden Kickoff oder\nvom Succeeding Spot in Extraperioden. Schiedsrichter sollen die Nummern der verursachenden Spieler für eine mögliche Disqualifikation notieren, falls diese Spieler im weiteren Spielverlauf ein zweites unsportliches Verhalten-Foul verursachen (Regel 9.2.1.a.1 Strafe)."
