src/snapshots/afrotd__parser__tests__interpretation_9.2.1_3.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 9
  - 2
  - 1
index: 3
text: "2. und 5 von der B-40. Back A22 erhält einen Rückpass vom\nQuarterback, dreht sich nach rechts und stürmt in Richtung Goalline.\nGuard A66, der voraus gelaufen war, um für A22 zu blocken, blockt B90\nlegal zu Boden. A66 bleibt an der B-30 über dem am Boden liegenden\nB90 stehen, verhöhnt ihn und ruft obszöne Beleidigungen. Dafür erhält\ner eine Flagge von einem der Schiedsrichter, als sich A22 an der B-10\nbefindet. A22 setzt seinen Weg in die Endzone ungehindert fort."
ruling: "Live Ball Foul für unsportliches Verhalten. 15-Meterstrafe von der\nB-30, dem Punkt des Fouls und Wiederholung des zweiten Downs. A’s\nBall, 2. und 10 von der B-45."
