src/snapshots/afrotd__parser__tests__interpretation_9.2.1_4.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 9
  - 2
  - 1
index: 4
text: "3. und 15 von der B-20. Der berechtigte A88 fängt einen Pass\nan der B-18 und stürmt in Richtung Goalline. In der Nähe der Goalline\ndreht er sich um und macht eine obszöne Geste in Richtung des ihn\nverfolgenden B99. Danach überquert A88 B’s Goalline. Der Fieldjudge\nist sich unsicher hinsichtlich des genauen Punktes, an dem A88 seine\nbeleidigende Geste begann."
ruling: "Foul für unsportliches Verhalten. Wird als Dead Ball Foul durchgeführt. Der Touchdown zählt und die\nStrafe wird, je nach Team B’s Wahl, entweder beim Try, dem anschließenden Kickoff oder vom Succeeding Spot in Extraperioden durchgeführt."
